// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Avatar matches snapshot 1`] = `
.c2 {
  position: relative;
  z-index: 2;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 20px;
  height: 20px;
  box-sizing: content-box;
  margin-right: -11px;
  background-color: #fff;
  border-right: 1px solid solid #fff;
  border-radius: 2px;
  -webkit-transition: margin 0.1s ease-in-out;
  transition: margin 0.1s ease-in-out;
}

.c2:first-child {
  z-index: 3;
}

.c2:last-child {
  z-index: 1;
  border-right: 0;
}

.c2 img {
  border-radius: 2px;
}

.c2:nth-child(n+4) {
  display: none;
  opacity: 0;
}

.c0 {
  display: inline-block;
  position: relative;
  min-width: 46px;
  height: 20px;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: absolute;
  background: white;
}

.c1:hover .avatar {
  margin-right: 3px;
}

.c1:hover .avatar:nth-child(n+4) {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  opacity: 1;
}

.c1:hover .avatar-more {
  display: none !important;
}

.c1 .avatar-more {
  z-index: 1;
  margin-right: 0;
  background: #e1e4e8;
}

.c1 .avatar-more::before,
.c1 .avatar-more::after {
  position: absolute;
  display: block;
  height: 20px;
  content: '';
  border-radius: 2px;
  outline: 1px solid solid #fff;
}

.c1 .avatar-more::before {
  width: 17px;
  background: #e1e4e8;
}

.c1 .avatar-more::after {
  width: 14px;
  background: #d1d5da;
}

<span
  className="c0"
>
  <span
    className="body c1"
  >
    <img
      className="avatar c2"
      src="https://avatars.githubusercontent.com/primer"
    />
    <img
      className="avatar c2"
      src="https://avatars.githubusercontent.com/github"
    />
    <div
      className="avatar-more"
    />
    <img
      className="avatar c2"
      src="https://avatars.githubusercontent.com/primer"
    />
    <img
      className="avatar c2"
      src="https://avatars.githubusercontent.com/github"
    />
  </span>
</span>
`;

exports[`Avatar respects alignRight props 1`] = `
.c2 {
  position: relative;
  z-index: 2;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 20px;
  height: 20px;
  box-sizing: content-box;
  margin-right: -11px;
  background-color: #fff;
  border-right: 1px solid solid #fff;
  border-radius: 2px;
  -webkit-transition: margin 0.1s ease-in-out;
  transition: margin 0.1s ease-in-out;
}

.c2:first-child {
  z-index: 3;
}

.c2:last-child {
  z-index: 1;
  border-right: 0;
}

.c2 img {
  border-radius: 2px;
}

.c2:nth-child(n+4) {
  display: none;
  opacity: 0;
}

.c0 {
  display: inline-block;
  position: relative;
  min-width: 46px;
  height: 20px;
}

.c0 .body {
  right: 0;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.c0 .body:hover .avatar {
  margin-right: 0;
  margin-left: 3px;
}

.c0 .avatar.avatar-more background:function (props) {
  return: (0,_core.get)(props.theme,path,fallback);
}

.c0 .avatar.avatar-more::before {
  width: 5px;
}

.c0 .avatar.avatar-more::after {
  width: 2px;
}

.c0 .avatar.avatar-more::after background:function (props) {
  return: (0,_core.get)(props.theme,path,fallback);
}

.c0 .avatar {
  margin-right: 0;
  margin-left: -11px;
  border-right: 0;
}

.c0 .avatar border-left:function (props) {
  return: (0,_core.get)(props.theme,path,fallback);
}

.c0 .avatar solid function (props) {
  return: (0,_core.get)(props.theme,path,fallback);
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: absolute;
  background: white;
}

.c1:hover .avatar {
  margin-right: 3px;
}

.c1:hover .avatar:nth-child(n+4) {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  opacity: 1;
}

.c1:hover .avatar-more {
  display: none !important;
}

.c1 .avatar-more {
  z-index: 1;
  margin-right: 0;
  background: #e1e4e8;
}

.c1 .avatar-more::before,
.c1 .avatar-more::after {
  position: absolute;
  display: block;
  height: 20px;
  content: '';
  border-radius: 2px;
  outline: 1px solid solid #fff;
}

.c1 .avatar-more::before {
  width: 17px;
  background: #e1e4e8;
}

.c1 .avatar-more::after {
  width: 14px;
  background: #d1d5da;
}

<span
  className="c0"
>
  <span
    className="body c1"
  >
    <img
      className="avatar c2"
      src="https://avatars.githubusercontent.com/primer"
    />
    <img
      className="avatar c2"
      src="https://avatars.githubusercontent.com/github"
    />
    <div
      className="avatar-more"
    />
    <img
      className="avatar c2"
      src="https://avatars.githubusercontent.com/primer"
    />
    <img
      className="avatar c2"
      src="https://avatars.githubusercontent.com/github"
    />
  </span>
</span>
`;
